# Payout-service

./: .gitignore  .gitlab-ci.yml  DEPLOY.md  MONITORING.md  Makefile  README.md  docker-compose.deploy.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  first-boot.sh
ansible/: .gitignore  Makefile  README.md  ansible.cfg  requirements.yml
ansible/files/: ansible_id_rsa  ansible_id_rsa.pub  root_id_rsa  root_id_rsa.pub
ansible/inventories/: production.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: bootstrap.yml  debug.yml  debug2.yml  install-basics.yml  runner.yml
ansible/resources/: register.sh
ansible/scripts/: .env  config-ssh  keygen.sh  set-vars.sh  sshcopy.sh
app/: .flake8  .isort.cfg  mypy.ini  pyproject.toml
app/src/: mypy.ini
app/src/config/: settings.py  urls.py
app/src/core/: celery.py  models.py
app/src/payouts/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
app/src/payouts/migrations/: 0001_initial.py  0002_payout_completed_at.py
deploy/ansible/: Makefile  ansible.cfg  requirements.yml
deploy/vault/: Makefile
docker/app/: Dockerfile  entrypoint.sh
docker/db/: .env
docker/override-compose/: .grafana-env  grafana-dashboards.yaml  loki-config.yaml  prometheus-config.yaml  promtail-config.yaml
docker/worker/: Dockerfile  pyproject.toml
gitlab-runner/: .env  docker-compose.yml
vault/: Makefile  README.md
vault/configs/: listener.hcl  logs.hcl  raft.hcl  server.hcl  telemetry.hcl
vault/policies/: admin.hcl  gitlab-runner.hcl
vault/scripts/: create-ssl.sh  unseal.sh  (+4 more)
(+50 files in other folders)
