[tool.poetry]
name = "payout-service"
version = "0.1.0"
description = "Service manage payout"
authors = ["Renat <ren484@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.7"
celery = "5.3.4"
redis = "5.0.1"
djangorestframework = "3.14.0"
psycopg2-binary = "2.9.9"
python-dotenv = "1.0.0"
black = "^25.12.0"
flake8 = "^7.3.0"
mypy = "^1.19.0"
drf-spectacular = "^0.29.0"
isort = "^7.0.0"
prometheus-client = "^0.23.1"
django-prometheus = "^2.4.1"
autoflake = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true
remove-duplicate-keys = true
ignore-init-module-imports = false
exclude = [
  "**/__pycache__/**",
  "**/.git/**",
  "**/*.pyi",
  "**/migrations/**",
  "tests/**"
]